SVG textPath rendering is broken when letter-spacing is present
Categories
(Core :: SVG, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox-esr128 | --- | unaffected |
| firefox128 | --- | unaffected |
| firefox129 | + | fixed |
| firefox130 | + | fixed |
People
(Reporter: jfkthame, Assigned: jfkthame)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
48 bytes,
text/x-phabricator-request
|
Details | Review | |
|
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-beta+
|
Details | Review |
Since bug 1892262 landed, the testcase at https://bug1663380.bmoattachments.org/attachment.cgi?id=9174256, which should render the text "ABCDE ABCDE" spaced out along an arc, displays only the first character; the remaining text is missing.
Bug 1892262 added code to "trim" leading letter-spacing at start of line. I don't think we should apply this to text in SVG. In general it's unclear what would be the "start of line" as text elements (or indeed the individual characters within them) may be placed arbitrarily.
Comment 1•1 year ago
|
||
Set release status flags based on info from the regressing bug 1892262
| Assignee | ||
Comment 2•1 year ago
|
||
SVG text elements in general don't have a clearly-defined concept of "lines", so we can't
know where it would be appropriate to trim.
Updated•1 year ago
|
Comment 5•1 year ago
|
||
| bugherder | ||
| Assignee | ||
Comment 8•1 year ago
|
||
SVG text elements in general don't have a clearly-defined concept of "lines", so we can't
know where it would be appropriate to trim.
Original Revision: https://phabricator.services.mozilla.com/D216506
Updated•1 year ago
|
Comment 9•1 year ago
|
||
beta Uplift Approval Request
- User impact if declined: SVG text-on-path broken if letter-spacing is present
- Code covered by automated testing: yes
- Fix verified in Nightly: no
- Needs manual QE test: no
- Steps to reproduce for manual QE testing: n/a
- Risk associated with taking this patch: low
- Explanation of risk level: one-line patch to avoid affecting SVG text
- String changes made/needed: none
- Is Android affected?: yes
Updated•1 year ago
|
Updated•1 year ago
|
Comment 10•1 year ago
|
||
| uplift | ||
Description
•