Bug 1907772 - Don't attempt to trim letter-spacing at start of line in textframes being used for SVG text. r=longsonr

SVG text elements in general don't have a clearly-defined concept of "lines", so we can't
know where it would be appropriate to trim.

Differential Revision: https://phabricator.services.mozilla.com/D216506